# nero

./: .gitignore  .~lock.NeroLog.ods#  .~lock.神经网络学习笔记.ods#  .~lock.神经网络记录.ods#  ChangeLog  DataFlowProcess.dia  NeroLog.ods  NeroNote.ods  git  shell  openHeadFile.sh  openSrcFile.sh  概述.ods  版本说明  神经网络学习笔记.ods  神经网络记录.ods
assistant/: Makefile  picShow.c
codeK/4-22开始搜索线条了可以/era/: MainWindow.c  MainWindow.h  Makefile
codeK/4-22开始搜索线条了可以/era/common/: type.h
codeK/4-22开始搜索线条了可以/era/graph/: searchLine.c
codeK/4-22开始搜索线条了可以/pictureDisplay/: gtkMain
codeK/428/era/: 开发日志、
codeK/428/era/common/: type.h
codeK/428/era/opcv/: Makefile
codeK/428/pictureDisplay/: MainWindow.c  Makefile
codeK/428/pictureDisplay/common/: list.h
codeK/era5颜色除问题了/: MainWindow.h  gtkMain
codeK/era5颜色除问题了/graph/: bmpRead.h
codeK/era6点阵图完成/: Makefile
codeK/era6点阵图完成/common/: fileOperating.h
codeK/era6点阵图完成/graph/: bmpRead.c
codeK/newera1/: Makefile-old  gtkMain.c
codeK/newera1/nbproject/: configurations.xml
codeK/newera1/opcv/: Untitled Document 1
codeK/old/4-22开始搜索线条了可以/era/: gtkMain  开发日志、
codeK/old/4-22开始搜索线条了可以/pictureDisplay/: MainWindow.c  Makefile  gtkMain.c
codeK/old/428/era/: MainWindow.h
codeK/old/428/era/Data/: config
codeK/old/era5颜色除问题了/graph/: bmpRead.c
codeK/old/era6点阵图完成/: gtkMain
codeK/old/era6点阵图完成/Data/: config
codeK/old/era6点阵图完成/common/: fileOperating.c
codeK/old/eraOld20131113/: MainWindow.h
codeK/old/eraOld20131113/graph/: searchLine.c
data/: wordspic.dot  字库
data/待处理/: 《梁思成和林徽因》作者：费慰梅.txt  现代汉语常用词汇表.txt  现代汉语词典.rar
data/金庸作品全集txt下载/: 天龙八部.txt  射雕英雄传.txt  白马啸西风.txt  碧血剑.txt  越女剑.txt  雪山飞狐.txt  鹿鼎记.txt
era/: MainWindow.c  MainWindow.h  Makefile  gtkMain  开发日志、
era/NeuralNetwork/: Makefile  NeuralNetwork.c  NeuralNetwork.h  NeuralOperating.c  NeuralOperating.h
era/common/: Makefile  NeroMsgId.h  error.h  fileOperating.h  list.h  type.h
era/data/: ceshi  ceshi2  pic.dot  w2  wordspic.dot  字库  现代汉语常用词汇表.txt  词库
era/data/金庸作品全集txt下载/: 倚天屠龙记.txt  必读.txt  笑傲江湖.txt  飞狐外传.txt  鸳鸯刀.txt
era/graph/: searchLine.h
era/log/: log.txt  汉字
era/nbproject/: Package-Default.bash  project.xml
era/tools/: Makefile  Nero_IO.c  Nero_IO.h  createDot.c  createDot.h  readUTF8File.c  readUTF8File.h
newera/: MainWindow.h  Makefile
newera/common/: Neuron.h
newera/opcv/: 遍历CvSeq里面的元素
oldCode/era20131118可以实现画图/: MainWindow.c  MainWindow.h  Makefile
oldCode/era20131118可以实现画图/NeuralNetwork/: NeuralNetwork.c  NeuralNetwork.h
oldCode/era20131118可以实现画图/common/: Makefile
oldCode/era20131118可以实现画图/data/: pic
oldCode/era20131118可以实现画图/nbproject/: configurations.xml
oldCode/era20131118可以实现画图/nbproject/private/: configurations.xml
oldCode/era20131118可以实现画图/opcv/: Makefile
oldCode/era20131118可以实现画图/tools/: createDot.h
oldCode/era20131122成功加入单词/: MainWindow.c
oldCode/era20131122成功加入单词/NeuralNetwork/: NeuralNetwork.c
oldCode/era20131122成功加入单词/common/: fileOperating.c
oldCode/era20131122成功加入单词/data/: pic.dot  wordspic.dot
oldCode/era20131122成功加入单词/graph/: Makefile
oldCode/era20131122成功加入单词/nbproject/: configurations.xml  project.xml
oldCode/era20131122成功加入单词/opcv/: candy.h
oldCode/era20131122成功加入单词/tools/: createDot.h  readUTF8File.h
oldCode/newera1/: MainWindow.c
oldCode/newera1/Data/: config
oldCode/newera1/common/: Neuron.c
oldCode/newera1/graph/: bmpRead.c
oldCode/old/4-22开始搜索线条了可以/pictureDisplay/: MainWindow.h
oldCode/old/428/era/: MainWindow.c  Makefile  gtkMain  gtkMain.c
oldCode/old/era5颜色除问题了/: MainWindow.c
oldCode/old/era6点阵图完成/: MainWindow.c  MainWindow.h  gtkMain.c
oldCode/pictureDisplay/: MainWindow.h  gtkMain
oldCode/pictureDisplay/common/: type.h
pictureDisplay/: gtkMain
pictureDisplay/graph/: searchLine.c
src/: .tags  MainWindow-old.c  MainWindow.c  MainWindow.h  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  gtkMain  gtkMain.c  gtkMain.h  neroMain.c  neroMain.h  setUpAudoMake
src/.deps/: gtkMain-MainWindow.Po  gtkMain-Nero_IO.Po  gtkMain-Nero_Task.Po  gtkMain-NeuralNetwork.Po  gtkMain-NeuralOperating.Po  gtkMain-createDot.Po  gtkMain-fileOperating.Po  gtkMain-gtkMain.Po  gtkMain-readUTF8File.Po  gtkMain.Po
src/NeuralNetwork/: Makefile-old  NeuralNetwork.c  NeuralNetwork.h  NeuralOperating.c  NeuralOperating.h
src/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/common/: NeroMsgId.h  Neuron.h  fileOperating.c  fileOperating.h  list.h  sounds.c  sounds.h  type.h
src/data/: ChUnicode (复件)  ChUnicode*Unicode  ceshi  ceshi2  taskFile.sh  words  words22  words23  wordsGB  wordspic.dot  余华许三观卖血记  余华许三观卖血记.txt  实验词汇  现代汉语常用词汇表utf8.txt  词库
src/data/adult/: adultLearn.sh  adultLearn.short.sh  adultTest.sh  adultTest.short2.sh
src/data/iris/: LearningFileForIris.sh  TestingDataForIris.sh  TestingDataForIris.sh.save  TestingFileForIris.sh  newDataFileForIris.sh  test.sh
src/log/: AllKindOfFile.txt  log.txt  汉字和对应utf8码
src/tools/: Makefile-old  Nero_IO.c  Nero_IO.h  Nero_Task.c  Nero_Task.h  createDot.c  readUTF8File.c  readUTF8File.h
神经网络学习成果物/: 概述.xls  神经网络学习笔记.ods
资料/: ChUnicode  无标题文档  无标题文档 2  现代汉语常用词汇表utf8
资料/金庸作品全集txt下载/: 书剑恩仇录.txt  侠客行.txt  神雕侠侣.txt  连城诀.txt
(+30 files in other folders)
